fixes body overflow from fluid-container

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2,6 +2,7 @@
 
 div.container-fluid {
   padding: 0px;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -27,3 +28,5 @@ p {
 div.col-sm-7.doc-page {
   padding: 64px 72px;
 }
+
+
